--- a/src/modules/Seguridad/pages/IniciarSesion/IniciarSesion.scss
+++ b/src/modules/Seguridad/pages/IniciarSesion/IniciarSesion.scss
@@ -1,8 +1,20 @@
-.login__img {
-  background-image: url(../../../../assets/img/background_login.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  filter: brightness(70%);
+.login {
+  &__img {
+    background-image: url(../../../../assets/img/background_login_2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: brightness(50%);
+  }
 }
+
+// @media screen and (max-width: 910px) {
+//   .login {
+//     display: grid;
+//     grid-template-columns: 1fr;
+
+//     &__img {
+//       display: none;
+//     }
+//   }
+// }
