--- a/src/components/MenuLateral/MenuLateral.scss
+++ b/src/components/MenuLateral/MenuLateral.scss
@@ -46,4 +46,15 @@
 }
 
 .menu {
+  &::-webkit-scrollbar {
+    width: 14px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #c3c3c398;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #f1f1f14f;
+  }
 }
