--- a/src/modules/Seguridad/pages/CrearUsuario/compenetes/PerfilUsario/PerfilUsario.scss
+++ b/src/modules/Seguridad/pages/CrearUsuario/compenetes/PerfilUsario/PerfilUsario.scss
@@ -1,5 +1,4 @@
 .perfil-usario {
-  background-color: #003862;
   &_datos {
     color: #000000 !important;
     background-color: #d9d9d9;
@@ -8,5 +7,6 @@
     margin-right: 20px;
     padding: 10px;
     height: 92vh;
+    overflow: auto;
   }
 }
