--- a/src/modules/Seguridad/pages/CrearUsuario/components/ui/formUsario.scss
+++ b/src/modules/Seguridad/pages/CrearUsuario/components/ui/formUsario.scss
@@ -130,6 +130,9 @@
   img {
     height: 175px;
     width: 15%;
+    border-style: solid;
+    border-width: 6px;
+    border-color: #001f36;
   }
   .imp {
     display: flex;
@@ -140,7 +143,7 @@
     button {
       background-color: #a4a4a4;
       height: 20px;
-      width: 50%;
+      width: 40%;
       color: #000;
       font-size: 10px;
       font-weight: normal;
