--- a/src/modules/Seguridad/pages/PanelAdministrador/PanelAdministrador.scss
+++ b/src/modules/Seguridad/pages/PanelAdministrador/PanelAdministrador.scss
@@ -15,7 +15,7 @@
       &-1 {
         display: grid;
         grid-template-columns: 7fr 1fr;
-        max-height: 225px;
+        max-height: 32vh;
 
         &-botonLista {
           display: grid;
@@ -36,7 +36,7 @@
       &-2 {
         display: grid;
         grid-template-rows: 1fr 5fr;
-        max-height: 232px;
+        max-height: 33vh;
 
         // BOTONES - start
 
@@ -46,12 +46,25 @@
           overflow: auto;
 
           &-childrens {
-            min-height: 160px;
+            min-height: 24vh;
             min-width: 180px;
             border-style: solid;
             border-width: 0.5px;
             border-color: rgb(186, 186, 186);
             position: relative;
+
+            button {
+              display: grid;
+              grid-template-rows: 5fr 1fr;
+
+              svg {
+                font-size: 7vh;
+              }
+
+              p {
+                font-size: 1rem;
+              }
+            }
 
             &-notification {
               display: flex;
