Lista de usuarios del panel de administrador

--- a/src/components/Tables/TableListaUsuarios/TableListaUsuarios.scss
+++ b/src/components/Tables/TableListaUsuarios/TableListaUsuarios.scss
@@ -1,44 +1,46 @@
-tr {
-  &:nth-child(even) {
-    background: #c1c1c1;
-  }
-}
-
-th {
-  &:nth-child(1) {
-    text-align: left;
-  }
-  &:nth-child(5) {
-    font-size: 13px;
-  }
-  &:nth-child(6) {
-    font-size: 13px;
-  }
-}
-
-td {
-  &:nth-child(1) {
-    max-width: 200px;
+.lista-usuarios-principal {
+  tr {
+    &:nth-child(even) {
+      background: #c1c1c1;
+    }
   }
 
-  &:nth-child(3) {
-    text-align: center;
-    max-width: 120px;
+  th {
+    &:nth-child(1) {
+      text-align: left;
+    }
+    &:nth-child(5) {
+      font-size: 13px;
+    }
+    &:nth-child(6) {
+      font-size: 13px;
+    }
   }
 
-  &:nth-child(2) {
-    max-width: 300px;
-  }
+  td {
+    &:nth-child(1) {
+      max-width: 200px;
+    }
 
-  &:nth-child(5) {
-    text-align: center;
-  }
+    &:nth-child(3) {
+      text-align: center;
+      max-width: 120px;
+    }
 
-  &:nth-child(6) {
-    text-align: center;
-  }
+    &:nth-child(2) {
+      max-width: 300px;
+    }
 
-  &:nth-child(7) {
-    min-width: 211.3px;
+    &:nth-child(5) {
+      text-align: center;
+    }
+
+    &:nth-child(6) {
+      text-align: center;
+    }
+
+    &:nth-child(7) {
+      min-width: 211.3px;
+    }
   }
 }
