--- a/src/modules/Seguridad/pages/CrearUsuario/components/ui/formUsario.scss
+++ b/src/modules/Seguridad/pages/CrearUsuario/components/ui/formUsario.scss
@@ -90,7 +90,7 @@
           overflow: hidden;
           padding-top: 0px;
         }
-        :where(.css-dev-only-do-not-override-1kuana8).ant-picker-outlined {
+        :where(.css-dev-only-do-not-override-usln0u).ant-picker {
           border-radius: 0;
           background-color: #d9d9d9;
           width: 22vh;
