--- a/src/modules/Seguridad/pages/CrearUsuario/components/ui/formUsario.scss
+++ b/src/modules/Seguridad/pages/CrearUsuario/components/ui/formUsario.scss
@@ -7,6 +7,8 @@
   margin: 9px;
   align-self: flex-end;
   height: 35vh;
+  border-width: 3px;
+  border-color: #001f36;
 
   &_perfil {
     background-color: #001f36;
@@ -16,6 +18,7 @@
     margin: 9px;
     align-self: flex-end;
     height: 16vh;
+    overflow-y: auto;
 
     input {
       background-color: #d9d9d9;
