--- a/src/modules/Pagos/pages/PagosGeneral/components/FormPagos.scss
+++ b/src/modules/Pagos/pages/PagosGeneral/components/FormPagos.scss
@@ -59,5 +59,85 @@
   }
   &-dato {
     background-color: #fff;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    &_uno {
+      display: grid;
+      grid-template-rows: 1.5fr 2fr;
+      border-right-width: 0.8px;
+      border-color: #000000;
+      &-uno {
+        border-bottom-width: 0.8px;
+        border-color: #000000;
+        padding-top: 20px;
+        padding-left: 40px;
+        padding-right: 40px;
+        input {
+          height: 6vh;
+          border-color: #000000;
+        }
+        button {
+          border-radius: 0;
+          height: 6vh;
+          border-color: #000000;
+          path {
+            color: #000000;
+          }
+        }
+      }
+      &-dos {
+        padding-top: 20px;
+        padding-left: 40px;
+        padding-right: 0px;
+        width: 90%;
+
+        input {
+          height: 12vh;
+          border-color: #000000;
+        }
+        button {
+          border-radius: 0;
+          border-color: #000000;
+          height: 6vh;
+
+          svg {
+            color: #000000;
+          }
+        }
+
+        :where(.css-dev-only-do-not-override-1paxfrs).ant-picker {
+          border-color: #000000;
+          border-radius: 0;
+          color: #000000;
+          width: 46vh;
+          height: 6vh;
+          span {
+            color: #000000;
+          }
+        }
+      }
+    }
+    &_dos {
+      padding-top: 20px;
+      padding-left: 40px;
+      padding-right: 40px;
+      input {
+        border-color: #000000;
+        height: 6vh;
+        width: 39vh;
+      }
+      button {
+        height: 6vh;
+        width: 6.5vh;
+        border-radius: 3px;
+      }
+      .registrar-pago {
+        background-color: #1ec468;
+        border-radius: 2px;
+        margin-top: 25px;
+        height: 6vh;
+        width: 100%;
+      }
+    }
   }
 }
