--- a/src/modules/Pagos/pages/PagosGeneral/components/FormPagos.scss
+++ b/src/modules/Pagos/pages/PagosGeneral/components/FormPagos.scss
@@ -76,6 +76,9 @@
           height: 6vh;
           border-color: #000000;
         }
+        label {
+          color: #000000;
+        }
         button {
           border-radius: 0;
           height: 6vh;
@@ -94,6 +97,9 @@
         input {
           height: 12vh;
           border-color: #000000;
+        }
+        label {
+          color: #000000;
         }
         button {
           border-radius: 0;
@@ -125,6 +131,9 @@
         border-color: #000000;
         height: 6vh;
         width: 39vh;
+      }
+      label {
+        color: #000000;
       }
       button {
         height: 6vh;
