--- a/src/modules/Pagos/pages/PagosGeneral/components/FormPagos.scss
+++ b/src/modules/Pagos/pages/PagosGeneral/components/FormPagos.scss
@@ -51,7 +51,7 @@
         border-bottom-width: 0.3px;
         button {
           margin-top: 8px;
-          background-color: #1ec468;
+          background-color: #003862;
           width: 91%;
         }
       }
