--- a/src/components/Tables/TableMenuPrincipal/TableMenuPrincipal.scss
+++ b/src/components/Tables/TableMenuPrincipal/TableMenuPrincipal.scss
@@ -1,4 +1,4 @@
-.lista-usuarios {
+.menu-principal {
   tr {
     &:nth-child(even) {
       background: #c1c1c1;
@@ -7,13 +7,12 @@
 
   th {
     &:nth-child(1) {
-      text-align: left;
+      text-align: center;
     }
-    &:nth-child(5) {
-      font-size: 13px;
-    }
-    &:nth-child(6) {
-      font-size: 13px;
+
+    &:nth-child(3) {
+      text-align: center;
+      width: 300px;
     }
   }
 
@@ -21,14 +20,20 @@
     &:nth-child(1) {
       max-width: 200px;
     }
+    &:nth-child(2) {
+      max-width: 200px;
+      text-align: center;
+    }
 
     &:nth-child(3) {
       text-align: center;
-      max-width: 120px;
+      max-width: 220px;
+      text-align: left;
     }
 
-    &:nth-child(2) {
+    &:nth-child(4) {
       max-width: 300px;
+      text-align: center;
     }
 
     &:nth-child(5) {
@@ -40,7 +45,7 @@
     }
 
     &:nth-child(7) {
-      min-width: 211.3px;
+      text-align: center;
     }
   }
 }
