--- a/src/modules/Pagos/pages/PagosGeneral/components/FormPagos.scss
+++ b/src/modules/Pagos/pages/PagosGeneral/components/FormPagos.scss
@@ -45,6 +45,7 @@
         margin-left: 15px;
         margin-right: 15px;
         margin-top: 6px;
+        width: 44vh;
       }
       &-informacion {
         border-bottom-width: 0.3px;
