--- a/src/modules/Seguridad/pages/ListaUsuarios/FiltrosListaUsuarios/FiltrosListaUsuarios.scss
+++ b/src/modules/Seguridad/pages/ListaUsuarios/FiltrosListaUsuarios/FiltrosListaUsuarios.scss
@@ -1,4 +1,4 @@
-.filtros-table {
+.lista-usuarios-filtros {
   display: grid;
   grid-template-columns: 2fr 1fr;
 
@@ -21,30 +21,8 @@
   }
 }
 
-.filtros-table-menu-principal {
-  display: grid;
-  grid-template-columns: 2fr;
-
-  &__search {
-    display: grid;
-    min-width: 80vh;
-
-    &::-webkit-scrollbar {
-      height: 7px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: #c3c3c398;
-    }
-
-    &::-webkit-scrollbar-track {
-      background-color: #f1f1f14f;
-    }
-  }
-}
-
 @media screen and (max-width: 1200px) {
-  .filtros-table {
+  .flista-usuarios-filtros {
     display: grid;
     grid-template-columns: 1fr;
 
