--- a/src/modules/Pagos/pages/PagosGeneral/components/FormPagos.scss
+++ b/src/modules/Pagos/pages/PagosGeneral/components/FormPagos.scss
@@ -4,6 +4,7 @@
   grid-template-columns: 2.5fr 6fr;
   margin-top: 0;
   margin: 0 15px 0 15px;
+  overflow: auto;
   //margin: 10px;
 
   &-alumno {
@@ -115,8 +116,9 @@
           border-color: #000000;
           border-radius: 0;
           color: #000000;
-          width: 46vh;
+          width: 45.5vh;
           height: 6vh;
+          margin-right: 35px;
           span {
             color: #000000;
           }
