--- a/src/modules/Seguridad/pages/ListaUsuarios/FiltrosListaUsuarios/FiltrosListaUsuarios.scss
+++ b/src/modules/Seguridad/pages/ListaUsuarios/FiltrosListaUsuarios/FiltrosListaUsuarios.scss
@@ -1,42 +1,23 @@
-.lista-usuarios-filtros__box {
+.usuarios-filtros {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto;
 
-  &-search {
+  &__caja {
     display: grid;
-    // min-width: 80vh;
+    grid-template-columns: 3fr auto;
 
-    &-elements {
+    &-filtros {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
-    }
 
-    &-input {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-    }
+      &__selects {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+      }
 
-    // &::-webkit-scrollbar {
-    //   height: 7px;
-    // }
-
-    // &::-webkit-scrollbar-thumb {
-    //   background-color: #c3c3c398;
-    // }
-
-    // &::-webkit-scrollbar-track {
-    //   background-color: #f1f1f14f;
-    // }
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .lista-usuarios-filtros__box {
-    display: grid;
-    grid-template-columns: 1fr;
-
-    &__button {
-      display: none;
+      &__search {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+      }
     }
   }
 }
