--- a/src/modules/Seguridad/pages/ListaUsuarios/ListaUsuarios.scss
+++ b/src/modules/Seguridad/pages/ListaUsuarios/ListaUsuarios.scss
@@ -18,6 +18,12 @@
         &:nth-child(1) {
           text-align: center;
         }
+        &:nth-child(3) {
+          text-align: center;
+        }
+        &:nth-child(5) {
+          text-align: center;
+        }
       }
     }
     tfoot {
