--- a/src/modules/DatosAlumno/pages/MenuPrincipal/FiltrosMenuPrincipal/FiltrosMenuPrincipal.scss
+++ b/src/modules/DatosAlumno/pages/MenuPrincipal/FiltrosMenuPrincipal/FiltrosMenuPrincipal.scss
@@ -1,31 +1,18 @@
-.filtros-menu-principal {
+.menu-principal-filtros {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-rows: auto;
 
-  &__search {
+  &__caja {
     display: grid;
-    // min-width: 80vh;
 
-    &-elements {
+    &-filtros__selects {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
     }
 
-    &-input {
+    &-filtros__search {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
     }
-
-    // &::-webkit-scrollbar {
-    //   height: 7px;
-    // }
-
-    // &::-webkit-scrollbar-thumb {
-    //   background-color: #c3c3c398;
-    // }
-
-    // &::-webkit-scrollbar-track {
-    //   background-color: #f1f1f14f;
-    // }
   }
 }
