--- a/src/modules/Seguridad/pages/ListaUsuarios/ListaUsuarios.scss
+++ b/src/modules/Seguridad/pages/ListaUsuarios/ListaUsuarios.scss
@@ -4,7 +4,7 @@
   // display: flex;
   // flex-direction: column;
 
-  .usuarios-table {
+  &-table {
     thead {
       th {
         &:nth-child(1) {
