--- a/src/modules/DatosAlumno/pages/MenuPrincipal/MenuPrincipal.scss
+++ b/src/modules/DatosAlumno/pages/MenuPrincipal/MenuPrincipal.scss
@@ -23,6 +23,7 @@
         }
         &:nth-child(5) {
           text-align: center;
+          max-width: 100px;
         }
         &:nth-child(6) {
           text-align: center;
