commit listas optimizados

--- a/src/components/MenuLateral/MenuLateral.scss
+++ b/src/components/MenuLateral/MenuLateral.scss
@@ -38,7 +38,7 @@
         padding-left: 28px !important;
 
         &:hover {
-          background-color: rgb(254, 240, 240) !important;
+          background-color: #ba0000 !important;
         }
       }
     }
