optimizado de listas

--- a/src/modules/Seguridad/pages/ListaUsuarios/ListaUsuarios.scss
+++ b/src/modules/Seguridad/pages/ListaUsuarios/ListaUsuarios.scss
@@ -18,6 +18,9 @@
         &:nth-child(1) {
           text-align: center;
         }
+        &:nth-child(2) {
+          min-width: 190px;
+        }
         &:nth-child(3) {
           text-align: center;
         }
