--- a/src/modules/DatosAlumno/pages/MenuPrincipal/MenuPrincipal.scss
+++ b/src/modules/DatosAlumno/pages/MenuPrincipal/MenuPrincipal.scss
@@ -21,6 +21,9 @@
         &:nth-child(3) {
           text-align: center;
         }
+        &:nth-child(4) {
+          min-width: 160px;
+        }
         &:nth-child(5) {
           text-align: center;
           max-width: 100px;
