--- a/src/modules/DatosAlumno/pages/SolicitudEstudiantesDelete/SolicitudEstudiantesDelete.scss
+++ b/src/modules/DatosAlumno/pages/SolicitudEstudiantesDelete/SolicitudEstudiantesDelete.scss
@@ -21,6 +21,9 @@
         &:nth-child(3) {
           text-align: center;
         }
+        &:nth-child(4) {
+          min-width: 190px;
+        }
         &:nth-child(5) {
           text-align: center;
           max-width: 100px;
