--- a/src/modules/DatosAlumno/pages/InscribirAlumno/Forms/Forms.scss
+++ b/src/modules/DatosAlumno/pages/InscribirAlumno/Forms/Forms.scss
@@ -1,4 +1,4 @@
-.crear-usuario__forms {
+.inscribir-alumno__forms {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
