datos personales del alumno

--- a/src/modules/DatosAlumno/pages/InscribirAlumno/Forms/Forms.scss
+++ b/src/modules/DatosAlumno/pages/InscribirAlumno/Forms/Forms.scss
@@ -18,5 +18,11 @@
         grid-template-columns: repeat(3, 1fr);
       }
     }
+    &-datos-secundarios {
+      &-inputs {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+      }
+    }
   }
 }
