--- a/src/modules/Caja/components/CajaChica.scss
+++ b/src/modules/Caja/components/CajaChica.scss
@@ -122,6 +122,9 @@
       }
     }
   }
+  .css-5ffwq2-MuiPaper-root-MuiTableContainer-root {
+    background-color: #d9d9d9;
+  }
 }
 // :where(.css-dev-only-do-not-override-128z1ng).ant-modal .ant-modal-content {
 //   height: 50vh;
@@ -160,7 +163,4 @@
 //   padding: 0;
 //   margin: 0;
 // }
-// //Tabla de gastos
-// .css-5t4sbu-MuiTable-root {
-//   background-color: #d9d9d9;
-// }
+//Tabla de gastos
