--- a/src/modules/Caja/components/CajaChica.scss
+++ b/src/modules/Caja/components/CajaChica.scss
@@ -57,6 +57,8 @@
           color: #000;
         }
         input {
+          height: 5vh;
+          min-width: 2vh;
           margin: 0 1vh 0 1vh;
           border-width: 0.5px;
           border-color: #000;
