--- a/src/modules/Reportes/pages/HistorialReporte/HistorialReporte.scss
+++ b/src/modules/Reportes/pages/HistorialReporte/HistorialReporte.scss
@@ -1,78 +1,46 @@
 .historial-reporte {
-  tr {
-    &:nth-child(even) {
-      background: #c1c1c1;
-    }
-  }
+  display: grid;
+  grid-template-rows: auto auto 1fr;
+  // display: flex;
+  // flex-direction: column;
 
-  th {
-    &:nth-child(1) {
-      width: 1vh;
-      text-align: center;
+  &-table {
+    thead {
+      th {
+        &:nth-child(1) {
+          text-align: center;
+          width: 50px;
+        }
+      }
     }
-
-    &:nth-child(2) {
-      text-align: center;
-      max-width: 250px;
+    tbody {
+      td {
+        &:nth-child(1) {
+          text-align: center;
+        }
+        &:nth-child(2) {
+          min-width: 190px;
+        }
+        &:nth-child(3) {
+          text-align: center;
+        }
+        &:nth-child(4) {
+          text-align: center;
+        }
+        &:nth-child(5) {
+          text-align: center;
+        }
+        &:nth-child(6) {
+          text-align: center;
+        }
+      }
     }
-
-    &:nth-child(3) {
-      text-align: center;
-    }
-
-    &:nth-child(4) {
-      text-align: center;
-    }
-
-    &:nth-child(5) {
-      width: 13vh;
-      text-align: center;
-    }
-
-    &:nth-child(6) {
-      width: 13vh;
-      text-align: center;
-    }
-
-    &:nth-child(7) {
-      width: 13vh;
-      text-align: center;
-    }
-  }
-
-  td {
-    &:nth-child(1) {
-      max-width: 200px;
-    }
-
-    &:nth-child(2) {
-      text-align: left;
-      max-width: 250px;
-    }
-
-    &:nth-child(3) {
-      text-align: center;
-    }
-
-    &:nth-child(4) {
-      text-align: center;
-    }
-
-    &:nth-child(4) {
-      max-width: 300px;
-      text-align: center;
-    }
-
-    &:nth-child(5) {
-      text-align: center;
-    }
-
-    &:nth-child(6) {
-      text-align: center;
-    }
-
-    &:nth-child(7) {
-      text-align: center;
+    tfoot {
+      td {
+        &:nth-child(1) {
+          text-align: center;
+        }
+      }
     }
   }
 }
